--- a/3장_정리.md
+++ b/3장_정리.md
@@ -115,7 +115,40 @@ OS 내에서 실행되는 병행 프로세스들은 독립적이거나 협력적
 2. 계산 가속화
 3. 모듈성 : 큰 부분 하나가 아니라, 작은 부분 여러 개로 나누어서 유연성 + 효율성 증가
 
- 
+
+## 3.5 공유 메모리 시스템에서의 프로세스 간 통신
+공유 메모리를 사용하는 프로세스 간 통신에서는 통신하는 프로세스들이 공유 메모리 영역을 구축해야 한다.
+일반적으로 OS는 한 프로세스가 다른 프로세스의 메모리에 접근하는 것을 금지한다. 따라서 공유 메모리는 둘 이상의 프로세스가 이 제약 조건을 제거하는 것에 동의하는 것을 필요로 한다.
+협력하는 프로세스의 개념을 잘 이해하기 위해서, 협력하는 프로세스의 일반적인 패러다임인 생산자-소비자 문제를 이해하면 된다.
+생산자 : 정보를 생산
+소비자 : 정보를 소비
+생각해볼수 있는 예시
+
+- - - 
+## 리눅스에서 공유 메모리를 이용한 실습
+fork를 통해 메모리 공간을 공유하게 하고, pid를 통해서 부모와 자식을 구별한 후에
+부모 = 소비자, 자식이 정보를 생산하기를 기다림, 버퍼에 메모리가 채워졌음은 자식이 죽어서 데이터를 보냄
+자식 = 생산자, 정보를 생산한 후에 죽으면 됨
+이렇게 했을 때의 결과
+fork()를 해서 복사해서 사용 != 같은 공간을 공유, 따라서 원하는 값이 나오지 않음
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
