--- a/3장_정리.md
+++ b/3장_정리.md
@@ -185,7 +185,37 @@ send(P,msg), receive(Q,msg) 형태의 함수로 쓸 수 있다.
 (송신자만 수신자 이름을 지명 수신자는 pid를 통해 수신받음 )
 이 기법은 모두 프로세스를 지정해야 함 -> 모듈성을 제한한다는 것이 단점
 
-> 모듈성 : 
+> 모듈성 :  컴퓨터 프로그램이 모듈이라고 부르는 분리된 부분으로 작성될 때 나타나는 특성
+
+간접 통신에서 메시지들은 메일박스, 또는 포트로 송/수신된다.
+이런 경우에는 
+send(A(mbox),msg), receive(A,msg)로 함수들을 쓸 수 있다
+따라서 간접통신은, 직접통신과 다르게 두개 이상의 프로세스들과 연관될 수 있다.
+
+### 3.6.2 동기화 ( synchronization )
+프로세스간 통신은 send, receive 함수에 대한 호출에 의해 발생된다.
+각 함수를 구현할 떄는 다른 설계 옵션이 있다
+* 봉쇄형 ( blocking ) == 동기식
+* 비봉쇄형 ( nonblocking ) == 비동기식
+
+### 3.6.3 버퍼링
+통신이 직접적이든, 간접적이든 간에 통신하는 프로세스들에 의해 교환되는 메시지는 임시 큐에 들어가있다.
+기본적으로 이러한 큐를 구현하는 방식에는 세 가지가 있다.
+* 무용량 : 큐의 최대 길이가 0, 송신자는 수신자가 메시지를 수신할 때까지 기다려야 함
+* 유한 용량 : bounded capacity, 큐에 n개의 메시지를 놓을 수 있고, 꽉 차지 않은 상태면 계속 생산해서 수신 가능, 꽉 차있으면 수신자가 수신할 때까지 기다려야 함
+* 무한 용량 : 잠재적으로 무한한 길이를 가짐 -> 송신자는 절대 봉쇄되지 않음
+
+- - - 
+## Message queue의 예시 ( 리눅스 )
+key는 IPC 생성할 떄 주는 값
+key를 생성하는 법
+1. 사용자 지정 -> 유니크하지 않을 가능성 높음
+2. ftok -> 시스템에 요청, **만의 하나**의 확률로 유니크하지 않을 수 있음
+3.  IPC_PRIVATE 상수를 key_t key에 넣어주면 kernal이 key값을 하나 대응시켜줌
+(시스템에서 사용되고 있지 않은 것중에 하나를 줌 --> 유니크함을 보장해줌 )
+
+shared memory와 마찬가지로, send, receive를 위해서 먼저 자료구조를 만들어야 한다.
+key를 생성하는 방법중에 1번을 사용 ( 예시에 오류가 없게 하기 위해서, ipcs -q를 확인해서 해당 dir에 생성된 msq 자료구조가 없음을 확인하고 수행했다 )
 
 
 
@@ -194,6 +224,16 @@ send(P,msg), receive(Q,msg) 형태의 함수로 쓸 수 있다.
 
 
 
+
+
+
+
+
+
+
+
+
+  
 
 
 
