여기에 리눅스에서 파이프 + 예시만 추가하면 끝

--- a/3장_정리.md
+++ b/3장_정리.md
@@ -216,9 +216,58 @@ key를 생성하는 법
 
 shared memory와 마찬가지로, send, receive를 위해서 먼저 자료구조를 만들어야 한다.
 key를 생성하는 방법중에 1번을 사용 ( 예시에 오류가 없게 하기 위해서, ipcs -q를 확인해서 해당 dir에 생성된 msq 자료구조가 없음을 확인하고 수행했다 )
+<img width="476" alt="3장_9" src="https://github.com/dbswns124/OS-/assets/149889867/f5fac660-8a57-429c-90a7-cc428989455a">
+<img width="454" alt="3장_10" src="https://github.com/dbswns124/OS-/assets/149889867/41912f92-8e63-4811-b834-ee96d417f8ce">
+<img width="446" alt="3장_11" src="https://github.com/dbswns124/OS-/assets/149889867/6c377c30-de12-4329-b5ed-070f84280abb">
 
+정상 작동 하였다.
+매번 함수의 리턴값을 확인하는건 좀 귀찮긴 한데 수업시간에 교수님께서 이렇게 습관을 들여놔야 나중에 오류 났을때 빠르게 찾기 편하다고 하셔서...습관을 들이는 중이다.
+그리고 msgbuf에서 mtype을 다른 걸로 받으려고 해보니 계속 block상태가 되었다.
+이럴 때는 msgrcv의 옵션에서 4번째를 0으로 하면 그냥 타입에 상관없이 큐의 첫번째 메시지를 가져오므로 문제 없다.
 
+- - -
 
+## IPC 시스템의 사례
+리눅스에서의 경우는 직접 해봤고, 윈도우는 패스
+### 3.7.4 파이프
+파이프는 두 프로세스가 통신할 수 있게 하는 전달자로서 동작
+초기 UNIX 시스템에서 제공하는 IPC 기법 중에 하나였다. 통상 프로세스 간의 통신하는 더 간단한 방법의 하나이지만, 통신을 할 때 여러 제약을 한다. 파이프를 구현하기 위해서는 다음 4가지 문제를 고려해야 한다.
+1. 파이프가 단반향 통신 또는 양방향 통신을 허용하는가? 
+-> 양방향 통신을 지원...하지만 하나는 write만 하나는 read만 함
+2. 양방향 통신이 허용된다면, half duplex인가 full duplex인가? ( 전자는 한순간에 한방향 전송만 가능하고, 후자는 동시에 양방향 데이터 전송이 가능 )
+ -> half duplex로 씀
+3. 통신하는 두 프로세스 간에 부모-자식 과 같은 특정 관계가 존재하여야 하는가?
+ -> 부모 자식간의 관계에서만 쓸 수 있음 ( 나중에 named pipe에서는 이게 필요 없어짐 )
+4. 파이프는 네트워크를 통하여 통신이 가능한가 아니면 동일한 기계 안에 존재하는 두 프로세스끼리만 통신할수 있는가?
+-> 네트워크 통신이 필요할 때는 나중에 배울 socket을 이용
+   
+- - -
+## 리눅스에서의 파이프 관련 함수들 + 예시
+
+- - -
+
+## 클라이언트 서버 환경에서 통신
+이 절에서는 서버 환경에서 사용할 수 있는 두가지 통신전략에 대해 설명한다
+* 소켓
+* 원격 프로시져 호출 ( RPCs )
+
+### 3.8.1 소켓
+소켓은 통신의 극점을 뜻한다. 두 프로세스가 네트워크상에서 통신을 하려면 양 프로세스마다 하나씩, 총 두개의 소켓이 필요하다.
+각 소켓은 IP addr + port num 두가지를 사용해서 구별한다.
+주로 소켓은 TCP / UDP로 나누고 추가적으로 더 있긴한데...컴퓨터 네트워크 시간에서 배울 때에는 학부생이 그것들을 쓸 일은 드물다고 했다.
+이 TCP / UDP 관련 내용은 OS 정리 하고 또 정리할 예정
+
+### 3.8.2 원격 프로시져 호출 ( RPCs )
+원격 서비스와 관련된 가장 보편적인 형태 중 하나는 RPC 패러다임으로서, 네트워크에 연결된 두 시스템 사이의 통신에 사용하기 위하여 프로시져 호출 기법을 추상화하는 방법으로 설계되었다.
+
+## 3.9 요약
+* 프로세스는 실행중인 프로그램이며, 현재 활동 상태는 PC + 레지스터들로 나타남
+* 메모리에서 프로세스의 레이아웃은 text, data, heap, stack으로 구분
+* 프로세스에는 5 state가 있다. run / ready / new / wait / terminate
+* PCB는 OS에서 프로세스를 나타내는 **커널** 데이터 구조이다
+* 프로세스 스케쥴러의 역할은 CPU에서 실행할 수 있는 프로세스를 선택하는 것이다.
+* 공유메모리를 사용해서 IPC를 하는 경우에 두 개 이상의 프로세스가 동일한 메모리 영역을 공유한다.
+* 파이프는 두 프로세스가 통신할 수 있는 통로를 제공한다. 일반, 지명 파이프 두가지 형태가 있다. 일반 파이프는 부모-자식 관계가 있는 프로세스들만 사용가능하고, 지명 파이프는 더 일반적이며 여러 프로세스가 통신 가능
 
 
 
