--- a/13장_정리.md
+++ b/13장_정리.md
@@ -53,7 +53,7 @@ open-file tbl에서 해당 idx를 제거한다.
 > 4. 접근 권한 : OS는 이 권한을 통해 후속 요구를 허용/거절하는데 사용
 
 ### 13.1.3 파일 유형
-OS가 파일 유형을 지우너하면, OS는 파일에 대해 합리적인 연산을 수행할 수 있다.
+OS가 파일 유형을 지원하면, OS는 파일에 대해 합리적인 연산을 수행할 수 있다.
 흔히 잘 알려진 방식은 파일이름.파일 유형 ( ex : consoleapp1.cpp -> C++ 파일, main.c -> C 소스코드 파일 )
 
 ### 13.1.4 파일 구조
@@ -83,16 +83,78 @@ UNIX, windows는 파일의 형태, 구조에 관하여 제한을 두지 않음
 (어떤 query가 들어오면 그 답을 수록하고 있는 블록을 체크하고 query에 적합하면 정보를 읽는 것 )
 
 ### 13.2.3 기타 접근 방법
-직접 접근 파일이 있으면 그것을 기반으로 여러 가지 다른 파일 접근 방법을 제공할 수 있다. 대부분 index를 사
+직접 접근 파일이 있으면 그것을 기반으로 여러 가지 다른 파일 접근 방법을 제공할 수 있다. 대부분 index를 사용
 
 ## 13.3 디렉터리 구조 
 디렉터리(앞으론 dir)은 파일 이름을 상응하는 파일 제어 블록으로 바꾸어 주는 symbol table이라고 볼 수 있다.
+따라서 디렉터리 그 자체가 여러가지 방법으로 구성될 수 있다. 이 절에서는 디렉터리 시스템의 논리적 구조를 정의하는 몇몇 체계를 일아본다
+
+특정한 dir 구조를 고려할 떄, 각 dir에 수행될 수 있는 연산을 주의깊게 살펴보아야 한다. 
+* dir 연산들
+*  파일찾기 : 사용자는 특정 파일을 찾기 위해 dir을 탐색할 필요가 있다.
+*  파일 삭제 : 더는 필요하지 않은 파일을 dir에서 삭제
+*  dir 나열 : 디렉터리에 존재하는 파일을 나열하고, 파일에 대한 dir 항목의 내용을 보여준다.
+*  파일의 재명명 : 파일의 이름을변경
+*  파일 시스템의 순회 : 파일 시스템의 여러 dir을 순회해 다니며 파일을 볼 수 있게 해주는 기능은 매우 유용하다.
+
+-----
+## 리눅스에서 파일 연산 + dir 안에서의 연산에 대한 실습
+- - -
+
+### 13.3.1 1단게 dir
+가장 간단한 dir 구조는 1단계 dir이다.
+여기서는 모든 파일이 다 같이 한개의 dir 밑에 있으므로 개념은 간단하다.
+하지만, 파일이 많아지거나 다수의 사용자가 사용하는 시스템에서는 심각한 제약을 갖고 있다.
+각 파일의 이름이 유일해야 하는데, 매번 다른 이름으로 명명하고 기억하기 쉽지 않음
+<img width="382" alt="1" src="https://github.com/dbswns124/OS-/assets/149889867/26cc23bc-073c-4c0e-a637-334f95e15a9e">
+
+### 13.3.2 2단계 dir
+1단계 dir에 대한 해결책으로 각 사용자에게 서로 다른 dir을 만들어주는게 2단계 dir이다.
+각 user는 자신만의 dir ( user file directory, UFD )를 갖고, UFD는 비슷한 구조로 되어있지만 각 dir에는 오직 한 사람만 파일을 저장.
+-> 마스터 파일 dir ( MFD ) 아래에 여러가지 UFD가 있는 구조
+<img width="422" alt="2" src="https://github.com/dbswns124/OS-/assets/149889867/0a86138e-a3df-48cf-a941-e84f541e9933">
+
+이 구조에서는 한 사용자의 UFD를 다른 사용자가 접근할수 없게 되어서, 공유 할 수 없게 됨
+접근할 수 있게 되면, path를 명확히 제시해야 함
 
 
+### 13.3.3 트리 구조 dir
+2단계 디렉터리 구조를 여러 단계로 확장한 구조
+<img width="358" alt="3" src="https://github.com/dbswns124/OS-/assets/149889867/7ccae20a-3830-4394-b779-bf94a9a19ce4">
 
+dir은 내부에 dir, 파일을 가질 수 있음
+통상적으로 각 프로세스는 현재 dir ( current dir ) 을 가지고 있다.
+경로명에는 두가지가 있다.
+1. 절대 경로명 : absolute path name, root부터 파일까지 경로를 모두 적는것
+2. 상대 경로명 : relative path name, 현재 dir을 이용해서 경로를 정의하는 것
 
+트리구조에서 생기는 흥미로운 문제는 dir의 삭제 문제이다.
+dir이 비어있으면 간단하지만, 비어있지 않으면 전부 삭제 / 삭제하지 않기 ( Linux에서는 rm에 옵션을 통해 선택)
 
+### 13.3.4 비순환 그래프 dir
+트리구조는 dir이나 파일의 공유를 허락하지는 않지만, 비순환 그래프는 dir이 서브dir,파일들을 공유할 수 있도록 허용하는 구조이다. ( 복사본과는 다름!! )
+<img width="344" alt="4" src="https://github.com/dbswns124/OS-/assets/149889867/d90ad603-b512-4748-bcd7-7db4ed914861">
+공유 파일,dir은 여러가지 방법으로 구현된다.
+일반적인 방법은 link라고 불리는 새로운 dir항목을 만드는 것이다.
+*link : 다른 파일이나 sub_dir을 가리키는 포인터, 절대/상대 경로명으로 구현될 수 있음
+또 다른 방법은 dir들이 동일한 항목 내용을 복사해서 가지고 있는 방법이다.
+따라서 하나의 dir/파일을 변경하면 다른 동일한 복사본들도 바뀌어야 하는 일관성 문제가 있다.
 
+비순환 그래프 dir은 트리 구조보다 융퉁성이 있고 더 복잡하다.
+고려해야될 문제점이 많다.
+1. 여러개의 절대 경로를 갖지 않게 해야함
+2. 삭제 시의 문제
+
+### 13.3.5 일반 그래프 dir
+비순환 그래프 dir에서 중요한 문제점은 순환이 발생하지 않도록 어떻게 보장하냐는 것이다.
+2단계 dir 구조에서 시작해서 사용자가 subdir을 생성하면 트리 구조가 형성된다.
+단순히 새로운 파일/dir의 추가는 기존 트리구조의 성질을 유지하지만, 새로운 링크를 추가하면 트리구조는 파괴되고 일반적인 그래프 구조가 될 수 있다.
+
+<img width="371" alt="5" src="https://github.com/dbswns124/OS-/assets/149889867/233f60d6-8043-406b-a8e3-0ad058b1fdcf">
+
+비순환 그래프의 장점 : 파일 검색, 파일에 대한 참조의 존재 여부를 결정하는 알고리즘이 비교적 간단함
+순환이 허용될 경우, 잘못 설계된 알고리즘에서는 탐색을 종료하지 못하고 무한루프에 빠질 수 있게 됨
+이러함 문제는 파일을 삭제할 경우에도 발생한다. 
 
 
 
